fix: align the facebook widget on blog post display
* I think this must have changed, as we would have spotted this sooner,
  this hacky fixup makes it work for me (TM)

--- a/src/components/components/blog-post/blog-post.scss
+++ b/src/components/components/blog-post/blog-post.scss
@@ -44,4 +44,10 @@
     &__tag {
         //
     }
+
+    // hacky fixup for the facebook widget
+    .fb_iframe_widget {
+        position: relative;
+        top: 8px;
+    }
 }
